# champions-advantage

./: .gitignore  README.md  app.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md  sednIaEey  start.sh  tsconfig.json  vite.config.ts
api/: lead_receiver.py
assets/: style.css
attached_assets/: Pasted--Mission-Rebuild-Sign-Shop-Suite-as-React-Express-TypeS_1770532171267.txt  Pasted--The-mobile-UI-needs-a-complete-structural-overhaul-bas_1769489520078.txt  Pasted-Go-get-em-on-those-sales-calls-There-is-nothing-like-th_1769455941248.txt  Pasted-Here-s-the-beast-Copy-the-whole-thing-Mission-Rebuild-S_1770532125856.txt  Pasted-The-dashboard-looks-solid-nice-work-Now-let-s-add-the-k_1770534669742.txt
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: FileUpload.tsx  Layout.tsx  Lightbox.tsx  Skeleton.tsx  Spotlight.tsx  Toast.tsx
client/src/hooks/: useProjects.ts
client/src/lib/: api.ts  utils.ts
client/src/pages/: Dashboard.tsx  LeadsList.tsx  Ledger.tsx  ProjectDetail.tsx  ProjectsList.tsx  Settings.tsx
components/: __init__.py  attachment_station.py  icons.py  project_tiles.py
server/: db.ts  drive.ts  index.ts  routes.ts  seed.ts  storage.ts  upload.ts
services/: database_manager.py  email_service.py  gemini_service.py  migration_tracker.py  supabase_client.py  timezone_utils.py
shared/: schema.ts
views/: __init__.py  dashboard.py  lead_detail.py  ledger.py  migration_util.py  project_detail.py
